change domain model; change database model; add mappers; add codecs;