@@ -1,86 +1,61 @@
 package p.lodz.pl.nbd.manager.mapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
-import p.lodz.pl.nbd.model.box.Box;
-import p.lodz.pl.nbd.model.box.BoxType;
 import p.lodz.pl.nbd.model.box.Bundle;
 import p.lodz.pl.nbd.model.box.Envelope;
-import p.lodz.pl.nbd.persistence.document.box.BoxDocument;
-import p.lodz.pl.nbd.persistence.document.box.BoxTypeDocument;
-import p.lodz.pl.nbd.persistence.document.box.BundleDocument;
-import p.lodz.pl.nbd.persistence.document.box.EnvelopeDocument;
+import p.lodz.pl.nbd.persistence.udt.box.BundleUdt;
+import p.lodz.pl.nbd.persistence.udt.box.EnvelopeUdt;
 
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
 public final class BoxMapper {
 
-    public static List<BoxDocument> toBoxesDocuments(List<Box> boxes) {
-        return boxes.stream()
-                .map(BoxMapper::toBoxDocument)
-                .collect(Collectors.toList());
+    public static List<Bundle> toBundles(List<BundleUdt> bundlesTypes) {
+        return bundlesTypes.stream()
+                .map(BoxMapper::toBundle)
+                .toList();
     }
 
-    public static BoxDocument toBoxDocument(final Box box) {
-        return BoxDocument.builder()
-                .id(box.getId())
-                .weight(box.getWeight())
-                .boxType(toBoxTypeDocument(box.getBoxType()))
-                .build();
-    }
-
-    public static List<Box> toBoxes(List<BoxDocument> boxes) {
-        return boxes.stream()
-                .map(BoxMapper::toBox)
-                .collect(Collectors.toList());
-    }
-
-    public static Box toBox(final BoxDocument boxDocument) {
-        return Box.builder()
-                .id(boxDocument.getId())
-                .boxType(toBoxType(boxDocument.getBoxType()))
-                .weight(boxDocument.getWeight())
-                .build();
-    }
-
-    private static BoxType toBoxType(final BoxTypeDocument boxType) {
-        if (boxType instanceof BundleDocument) {
-            return toBundle((BundleDocument) boxType);
-        } else {
-            return toEnvelope((EnvelopeDocument) boxType);
-        }
-    }
-
-    private static Bundle toBundle(final BundleDocument boxType) {
-        return Bundle.builder()
+    public static Bundle toBundle(final BundleUdt boxType) {
+        return Bundle.lombokBuilder()
                 .fragile(boxType.getFragile())
                 .height(boxType.getHeight())
                 .width(boxType.getWidth())
                 .length(boxType.getLength())
-                .build();
+                .lombokBuild();
     }
 
-    private static Envelope toEnvelope(final EnvelopeDocument boxType) {
-        return Envelope.builder()
+    public static List<Envelope> toEnvelopes(List<EnvelopeUdt> envelopesTypes) {
+        return envelopesTypes.stream()
+                .map(BoxMapper::toEnvelope)
+                .toList();
+    }
+
+    public static Envelope toEnvelope(final EnvelopeUdt boxType) {
+        return Envelope.lombokBuilder()
                 .priority(boxType.getPriority())
                 .height(boxType.getHeight())
                 .width(boxType.getWidth())
                 .length(boxType.getLength())
-                .build();
+                .lombokBuild();
     }
 
-    private static BoxTypeDocument toBoxTypeDocument(final BoxType boxType) {
-        if (boxType instanceof Bundle) {
-            return toBundleDocument((Bundle) boxType);
-        } else {
-            return toEnvelopeDocument((Envelope) boxType);
-        }
+    public static List<BundleUdt> toBundlesTypes(List<Bundle> bundles) {
+        return bundles.stream()
+                .map(BoxMapper::toBundleType)
+                .toList();
     }
 
-    private static BundleDocument toBundleDocument(final Bundle boxType) {
-        return BundleDocument.builder()
+    public static List<EnvelopeUdt> toEnvelopesTypes(List<Envelope> envelopes) {
+        return envelopes.stream()
+                .map(BoxMapper::toEnvelopeType)
+                .toList();
+    }
+
+    public static BundleUdt toBundleType(final Bundle boxType) {
+        return BundleUdt.builder()
                 .fragile(boxType.getFragile())
                 .height(boxType.getHeight())
                 .width(boxType.getWidth())
@@ -88,8 +63,8 @@ public final class BoxMapper {
                 .build();
     }
 
-    private static EnvelopeDocument toEnvelopeDocument(final Envelope boxType) {
-        return EnvelopeDocument.builder()
+    public static EnvelopeUdt toEnvelopeType(final Envelope boxType) {
+        return EnvelopeUdt.builder()
                 .priority(boxType.getPriority())
                 .height(boxType.getHeight())
                 .width(boxType.getWidth())
