@@ -1,59 +1,45 @@
 package p.lodz.pl.nbd.manager.mapper;
 
-import static p.lodz.pl.nbd.manager.mapper.BoxMapper.toBoxes;
-import static p.lodz.pl.nbd.manager.mapper.BoxMapper.toBoxesDocuments;
+import static p.lodz.pl.nbd.manager.mapper.BoxMapper.toBundles;
+import static p.lodz.pl.nbd.manager.mapper.BoxMapper.toBundlesTypes;
+import static p.lodz.pl.nbd.manager.mapper.BoxMapper.toEnvelopes;
+import static p.lodz.pl.nbd.manager.mapper.BoxMapper.toEnvelopesTypes;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
-import p.lodz.pl.nbd.model.Locker;
 import p.lodz.pl.nbd.model.Shipment;
-import p.lodz.pl.nbd.persistence.document.shipment.LockerDocument;
-import p.lodz.pl.nbd.persistence.document.shipment.ShipmentDocument;
+import p.lodz.pl.nbd.persistence.table.shipment.ShipmentByStartDate;
 
 
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
 public final class ShipmentMapper {
 
-    public static List<Shipment> toShipments(List<ShipmentDocument> docs) {
+    public static List<Shipment> toShipments(List<ShipmentByStartDate> docs) {
         return docs.stream()
                 .map(ShipmentMapper::toShipment)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public static Shipment toShipment(ShipmentDocument doc) {
+    public static Shipment toShipment(ShipmentByStartDate doc) {
         var shipment = Shipment.builder()
                 .id(doc.getId())
-                .boxes(toBoxes(doc.getBoxes()))
-                .locker(toLocker(doc.getLocker()))
+                .bundles(toBundles(doc.getBundles()))
+                .envelopes(toEnvelopes(doc.getEnvelopes()))
                 .build();
-        shipment.setOngoing(doc.isOngoing());
+        shipment.setStartDate(doc.getStartDate());
+        shipment.setFinalizationDate(doc.getFinalizationDate());
         return shipment;
     }
 
-    private static Locker toLocker(final LockerDocument locker) {
-        return Locker.builder()
-                .empty(locker.getEmpty())
-                .password(locker.getPassword())
-                .build();
-    }
-
-    public static ShipmentDocument toShipmentDocument(Shipment shipment) {
-        var shipmentDoc = ShipmentDocument.builder()
+    public static ShipmentByStartDate toShipmentByStartDate(Shipment shipment) {
+        return ShipmentByStartDate.builder()
                 .id(shipment.getId())
-                .locker(toLockerDocument(shipment.getLocker()))
-                .boxes(toBoxesDocuments(shipment.getBoxes()))
-                .build();
-        shipmentDoc.setOngoing(shipment.isOngoing());
-        return shipmentDoc;
-    }
-
-    private static LockerDocument toLockerDocument(final Locker locker) {
-        return LockerDocument.builder()
-                .empty(locker.getEmpty())
-                .password(locker.getPassword())
+                .boxesCost(shipment.getBoxesCost())
+                .startDate(shipment.getStartDate())
+                .bundles(toBundlesTypes(shipment.getBundles()))
+                .envelopes(toEnvelopesTypes(shipment.getEnvelopes()))
                 .build();
     }
 }
